--- a/code/chap18.ipynb
+++ b/code/chap18.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -700,6 +700,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Related reading:** You might be interested in this article about [people making a DIY artificial pancreas](https://www.bloomberg.com/news/features/2018-08-08/the-250-biohack-that-s-revolutionizing-life-with-diabetes)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -723,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
