--- a/code/chap23.ipynb
+++ b/code/chap23.ipynb
@@ -258,6 +258,7 @@
     "plot(sweep, color='C2')\n",
     "decorate(xlabel='Launch angle (degree)',\n",
     "         ylabel='Range (m)',\n",
+    "         title='Range as a function of launch angle',\n",
     "         legend=False)\n",
     "\n",
     "savefig('figs/chap10-fig03.pdf')"
@@ -545,15 +546,6 @@
    "source": [
     "# Solution goes here"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -572,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
