--- a/code/filter.ipynb
+++ b/code/filter.ipynb
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a slope function that takes as an input a `State` object that contains `V_out`, and returns the derivative of `V_out`."
+    "**Exercise:** Write a slope function that takes as an input a `State` object that contains `V_out`, and returns the derivative of `V_out`."
    ]
   },
   {
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encapsulate the code we have so far in a function that takes two TimeSeries objects and returns the ratio between their amplitudes."
+    "**Exercise:** Encapsulate the code we have so far in a function that takes two TimeSeries objects and returns the ratio between their amplitudes."
    ]
   },
   {
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encapsulate this code in a function that takes two `TimeSeries` objects and a `System` object, and returns the phase offset in degrees.\n",
+    "**Exercise:** Encapsulate this code in a function that takes two `TimeSeries` objects and a `System` object, and returns the phase offset in degrees.\n",
     "\n",
     "Note: by convention, if the output is shifted to the right, the phase offset is negative."
    ]
@@ -620,7 +620,7 @@
    "source": [
     "### Sweeping frequency again\n",
     "\n",
-    "Write a function that takes as parameters an array of input frequencies and a `Params` object.\n",
+    "**Exercise:** Write a function that takes as parameters an array of input frequencies and a `Params` object.\n",
     "\n",
     "For each input frequency it should run a simulation and use the results to estimate the output ratio (dimensionless) and phase offset (in degrees).\n",
     "\n",
@@ -766,7 +766,7 @@
     "\n",
     "$ \\phi = \\arctan (- R C \\omega)$ \n",
     "\n",
-    "Write functions that take an array of input frequencies and returns $A(f)$ and $\\phi(f)$ as `SweepSeries` objects.  Plot these objects and compare them with the results from the previous section.\n"
+    "**Exercise:** Write functions that take an array of input frequencies and returns $A(f)$ and $\\phi(f)$ as `SweepSeries` objects.  Plot these objects and compare them with the results from the previous section.\n"
    ]
   },
   {
@@ -884,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
