--- a/code/chap04.ipynb
+++ b/code/chap04.ipynb
@@ -506,7 +506,7 @@
     "         xlabel='Arrival rate at Olin (p1 in customers/min)', \n",
     "         ylabel='Number of unhappy customers')\n",
     "\n",
-    "savefig('chap02-fig02.pdf')"
+    "savefig('figs/chap02-fig02.pdf')"
    ]
   },
   {
@@ -669,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
