--- a/code/chap05.ipynb
+++ b/code/chap05.ipynb
@@ -233,7 +233,7 @@
     "    \n",
     "decorate(xlabel='Year',\n",
     "         ylabel='World population (billion)')\n",
-    "savefig('chap03-fig01.pdf')"
+    "savefig('figs/chap03-fig01.pdf')"
    ]
   },
   {
@@ -515,7 +515,7 @@
     "decorate(xlabel='Year', \n",
     "         ylabel='World population (billion)',\n",
     "         title='Constant growth')\n",
-    "savefig('chap03-fig02.pdf')"
+    "savefig('figs/chap03-fig02.pdf')"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
