Updating world population example

--- a/code/examples/world_pop_transition2.ipynb
+++ b/code/examples/world_pop_transition2.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "To explore this question, we will look for a model that reproduces linear growth, and identify the essential features that yield this behavior.\n",
     "\n",
-    "Specicially, we'll add two new features to the model:\n",
+    "Specifically, we'll add two new features to the model:\n",
     "\n",
     "1.  Age:  The current model does not account for age; we will extend the model by including two age groups, young and old, roughly corresponding to people younger or older than 40.\n",
     "\n",
