--- a/code/chap08-mine.ipynb
+++ b/code/chap08-mine.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1083,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model followed the data, as well as the UN prediction, shockingly well until about 2060, at which point our model quickly begins to deviate from other projections. This is "
+    "This model followed the data, as well as the UN prediction, shockingly well until about 2060, at which point our model quickly begins to deviate from other projections. This is because our model assumes that population growth rate will change at a constant rate, which logically doesn't make a lot of sense in the long term."
    ]
   },
   {
