Updating orbit_starter

--- a/code/orbit_starter.ipynb
+++ b/code/orbit_starter.ipynb
@@ -546,7 +546,7 @@
    "source": [
     "# Scaling the distance to million km\n",
     "\n",
-    "results.r /= 1e9"
+    "r = results.r / 1e9;"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "source": [
     "# And plotting\n",
     "\n",
-    "plot(results.r, label='r')\n",
+    "plot(r, label='r')\n",
     "\n",
     "decorate(xlabel='Time (day)',\n",
     "         ylabel='Distance from sun (million km)')"
